--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.xwiki.platform</groupId>
     <artifactId>xwiki-platform-component</artifactId>
-    <version>4.1-SNAPSHOT</version>
+    <version>4.2-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-component-wiki</artifactId>
   <name>XWiki Platform - Component - Wiki Components</name>
@@ -66,6 +66,12 @@
       <artifactId>servlet-api</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Since we're mocking a class (XWiki) we need those -->
+    <dependency>
+      <groupId>org.jmock</groupId>
+      <artifactId>jmock-legacy</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -75,8 +81,7 @@
         <configuration>
           <excludes>
             <!-- Implements InvocationHandler and throwing 'Throwable' is not allowed. -->
-            **/WikiComponentInvocationHandler.java,
-            **/DefaultWikiComponentBuilder.java
+            **/WikiComponentInvocationHandler.java
           </excludes>
         </configuration>
       </plugin>
